--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,23 @@ ext {
     mysqlVersion = "5.1.39"
     h2Version = "1.3.176"
     liquibaseVersion = "3.3.5"
+    
+    intygInsuranceprocessSchemasVersion = "1.0.4"
+    rivtaClinicalprocessSchemasVersion = "2.0.RC6.2"
+    intygHealthcondRehabilitationSchemasVersion = "1.0.4"
+    rivtaDirectoryOrganizationSchemasVersion = "1.1.RC5.4"
+    rivtaItintegrationMonitoringSchemasVersion = "1.0.0.4"
+    
+    commonsIoVersion = "2.4"
+    geronimoJmsVersion = "1.1.1"
+    javaxServletApiVersion = "2.5"
+    xmlUnitVersion = "1.4"
+    restassuredVersion = "2.8.0"
+    jsonSchemaValidatorVersion = "2.8.0"
+    stAntlr4Version = "4.0.8"
+    jpaHibernateVersion = "1.0.0"
+    jadiraUserTypeVersion = "5.0.0"
+    springDataVersion = "1.9.0"
 }
 
 
