--- a/web/build.gradle
+++ b/web/build.gradle
@@ -34,8 +34,8 @@ war.dependsOn createVersionPropertyFile
 dependencies {
     compile project(':intygstjanst-persistence')
 
-    compile "se.inera.intyg.insuranceprocess.healthreporting:intyg-insuranceprocess-healthreporting-schemas:1.0.3"
-    compile "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:2.0.RC6.1"
+    compile "se.inera.intyg.insuranceprocess.healthreporting:intyg-insuranceprocess-healthreporting-schemas:${intygInsuranceprocessSchemasVersion}"
+    compile "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
 
     compile "se.inera.intyg.common:hsa-integration:${commonVersion}"
 
@@ -49,24 +49,24 @@ dependencies {
     compile "se.inera.intyg.intygstyper:luae_na:${typerVersion}"
     compile "se.inera.intyg.intygstyper:fk7263:${typerVersion}"
 
-    compile 'commons-io:commons-io:2.4'
+    compile "commons-io:commons-io:${commonsIoVersion}"
     compile "org.springframework:spring-jms:${springVersion}"
-    compile 'se.riv.infrastructure.directory.organization:infrastructure-directory-organization-schemas:1.1.RC5.3'
-    compile 'se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:1.0.3'
-    compile "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:1.0.0.3"
+    compile 'se.riv.infrastructure.directory.organization:infrastructure-directory-organization-schemas:${rivtaDirectoryOrganizationSchemasVersion}'
+    compile "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
+    compile "se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:${intygHealthcondRehabilitationSchemasVersion}"
     compile "org.springframework:spring-webmvc:${springVersion}"
 
-    compileOnly 'org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1.1'
-    compileOnly 'javax.servlet:servlet-api:2.5'
+    compileOnly "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
+    compileOnly "javax.servlet:servlet-api:${javaxServletApiVersion}"
 
     testCompile "org.springframework:spring-test:${springVersion}"
-    testCompile 'xmlunit:xmlunit:1.4'
-    testCompile 'com.jayway.restassured:rest-assured:2.8.0'
-    testCompile 'com.jayway.restassured:json-schema-validator:2.8.0'
-    testCompile 'org.antlr:ST4:4.0.8'
-    testCompile 'org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1.1'
+    testCompile "xmlunit:xmlunit:${xmlUnitVersion}"
+    testCompile "com.jayway.restassured:rest-assured:${restassuredVersion}"
+    testCompile "com.jayway.restassured:json-schema-validator:${jsonSchemaValidatorVersion}"
+    testCompile "org.antlr:ST4:${stAntlr4Version}"
+    testCompile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
 
-    testRuntime 'javax.servlet:servlet-api:2.5'
+    testRuntime "javax.servlet:servlet-api:${javaxServletApiVersion}"
     
     gretty "org.apache.activemq:activemq-client:${activeMqVersion}"
     gretty "org.apache.activemq:activemq-broker:${activeMqVersion}"
