--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ ext {
     mysqlVersion = "5.1.39"
     h2Version = "1.3.176"
     liquibaseVersion = "3.3.5"
-    
     intygInsuranceprocessSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "2.0.RC6.2"
     intygHealthcondRehabilitationSchemasVersion = "1.0.4"
@@ -24,8 +23,9 @@ ext {
     jpaHibernateVersion = "1.0.0"
     jadiraUserTypeVersion = "5.0.0"
     springDataVersion = "1.9.0"
-}
 
+    mockitoVersion = "1.9.0"
+}
 
 allprojects  {
     group = 'se.inera.intyg.intygstjanst'
@@ -135,9 +135,10 @@ subprojects {
     }
 
     dependencies {
-        testCompile 'junit:junit:4.12'
-        testCompile 'org.mockito:mockito-core:1.9.0'
         buildtools "se.inera.intyg.common:common-build-tools:${commonVersion}"
+
+        testCompile 'junit:junit:4.+'
+        testCompile "org.mockito:mockito-core:${mockitoVersion}"
     }
 
     repositories {
