--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -41,3 +41,11 @@ infrastructure.directory.organization.gethealthcareunitmembers.endpoint.url=http
 infrastructure.directory.employee.getemployee.endpoint.url=http://localhost:8080/inera-certificate/hsa-employee
 
 infrastructure.directory.logicalAddress=
+
+################################################
+#
+# HSA/PU ignite cache settings
+#
+################################################
+cache.ipaddresses=127.0.0.1:47500..47509
+cache.expiration.seconds=60
