--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -48,4 +48,8 @@ infrastructure.directory.logicalAddress=
 #
 ################################################
 cache.ipaddresses=127.0.0.1:47500..47509
-cache.expiration.seconds=60
+cache.default.expiration.seconds=60
+
+hsa.unit.cache.expiry=60
+hsa.healthcareunit.cache.expiry=60
+hsa.healhcareunitmembers.cache.expiry=60
