INTYG-3139: Byter namn lisu -> lisjp

--- a/web/recipient-dev.properties
+++ b/web/recipient-dev.properties
@@ -38,7 +38,7 @@
 #   FKORG                    for development mode
 recipient.FK.name = F\u00F6rs\u00E4kringskassan
 recipient.FK.logicalAddress = Test
-recipient.FK.certificateType = fk7263,luse,lisu,luae_fs,luae_na
+recipient.FK.certificateType = fk7263,luse,lisjp,luae_fs,luae_na
 
 # Defines the recipient TS (Transportstyrelsen)
 recipient.TS.name = Transportstyrelsen
