--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,14 @@ ext {
     commonVersion = System.properties['commonVersion'] ?: '0-SNAPSHOT'
     typerVersion = System.properties['typerVersion'] ?: '0-SNAPSHOT'
 
-    springVersion = "4.2.2.RELEASE"
-    activeMqVersion = "5.13.4"
-    mysqlVersion = "5.1.39"
-    h2Version = "1.3.176"
-    liquibaseVersion = "3.3.5"
     intygInsuranceprocessSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "2.0.RC6.2"
     intygHealthcondRehabilitationSchemasVersion = "1.0.4"
     rivtaDirectoryOrganizationSchemasVersion = "1.1.RC5.4"
     rivtaItintegrationMonitoringSchemasVersion = "1.0.0.4"
-    
+    springVersion = "4.2.2.RELEASE"
+    activeMqVersion = "5.13.4"
+    liquibaseVersion = "3.3.5"
     commonsIoVersion = "2.4"
     geronimoJmsVersion = "1.1.1"
     javaxServletApiVersion = "2.5"
@@ -25,12 +22,15 @@ ext {
     springDataVersion = "1.9.0"
 
     mockitoVersion = "1.9.0"
+    mysqlVersion = "5.1.39"
+    h2Version = "1.3.176"
 }
 
-allprojects  {
+allprojects {
     group = 'se.inera.intyg.intygstjanst'
     version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
 
+    apply plugin: 'inera-intyg'
     apply plugin: 'maven'
     apply plugin: 'org.ajoberstar.grgit'
 }
@@ -41,32 +41,7 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
-    task createVersionPropertyFile(dependsOn: processResources) {
-        def propertyFile = "${buildDir}/resources/main/version.properties"
-        def projectVersion = rootProject.version
-        def gitCommit = grgit.head().id
-        def gitBranch = grgit.branch.getCurrent().getName()
-        def buildNumber = System.env.BUILD_NUMBER
-
-        inputs.property("project.version", projectVersion)
-        inputs.property("gitCommit", gitCommit)
-        inputs.property("gitBranch", gitBranch)
-        inputs.property("buildNumber", buildNumber)
-        outputs.file(propertyFile)
-
-        doLast {
-            ant.touch(file: propertyFile, mkdirs: "true")
-            ant.propertyfile(file: propertyFile) {
-                entry(key: 'project.version', default: projectVersion)
-                entry(key: 'gitCommit', default: gitCommit)
-                entry(key: 'gitBranch', default: gitBranch)
-                entry(key: 'buildNumber', default: buildNumber)
-                entry(key: 'buildTime', default: new Date())
-            }
-        }
-    }
-
-    jar.dependsOn(createVersionPropertyFile)
+    task createVersionPropertyFile(type: VersionPropertyFileTask)
 
     task unzipBuildTools(type: Copy) {
         description 'Extracts common-build-tools'
@@ -149,37 +124,9 @@ subprojects {
     }
 }
 
-String findResolvedVersion(Project project, String groupName) {
-    String version
-    project.configurations.find {
-        it.name == 'compile'
-    }.resolvedConfiguration.getFirstLevelModuleDependencies().find {
-        if (it.moduleGroup == groupName) {
-            version = it.moduleVersion
-            return true
-        }
-        return false
-    }
-    return version
-}
-
-task tagRelease {
-    description = 'Tags the current head with the projects version.'
-    doLast {
-        def grgit = org.ajoberstar.grgit.Grgit.open(creds: new org.ajoberstar.grgit.Credentials(System.properties['githubUser'],
-                                                                                                System.properties['githubPassword']))
-        grgit.tag.add {
-            name = "v" + version
-            message = "Release of ${version}"
-        }
-        grgit.push(tags: true)
-    }
-}
-
-task testReport(type: TestReport) {
-    destinationDir = file("$buildDir/reports/allTests")
-    reportOn subprojects*.test // Include the results from the 'test' task in all subprojects
-}
+task tagRelease(type: TagReleaseTask)
+                      
+task testReport(type: SharedTestReportTask)
 
 apply plugin: "org.sonarqube"
 
@@ -196,8 +143,9 @@ sonarqube {
 
 buildscript {
     dependencies {
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.1"
-        classpath 'org.ajoberstar:gradle-git:1.5.1'
+        classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.+'
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.+"
+        classpath 'org.ajoberstar:gradle-git:1.+'
         classpath 'org.akhikhl.gretty:gretty:+'
     }
 
