--- a/performanceTests/build.gradle
+++ b/performanceTests/build.gradle
@@ -33,8 +33,8 @@ task gatling(dependsOn: 'build') {
 }
 
 dependencies {
-    testCompile group: 'io.gatling', name: 'gatling-app', version: gatlingVersion
-    testCompile group: 'io.gatling', name: 'gatling-recorder', version: gatlingVersion
-    testCompile group: 'io.gatling.highcharts', name: 'gatling-charts-highcharts', version: gatlingVersion
-    testCompile group: 'org.scalaj', name: 'scalaj-http_2.11', version: '2.2.0'
+    testCompile "io.gatling:gatling-app:${gatlingVersion}"
+    testCompile "io.gatling:gatling-recorder:${gatlingVersion}"
+    testCompile "io.gatling.highcharts:gatling-charts-highcharts:${gatlingVersion}"
+    testCompile "org.scalaj:scalaj-http_2.11:2.2.0"
 }
