--- a/build.gradle
+++ b/build.gradle
@@ -44,39 +44,6 @@ subprojects {
         useBuildTime = true
     }
 
-    task unzipBuildTools(type: Copy) {
-        description 'Extracts common-build-tools'
-        into "$buildDir/build-tools/"
-        from {
-            configurations.buildtools.collect { zipTree(it) }
-        }
-    }
-
-    apply plugin: 'checkstyle'
-
-    checkstyle {
-        config = resources.text.fromFile("${buildDir}/build-tools/checkstyle/checkstyle.xml")
-        ignoreFailures = false
-        showViolations = true
-    }
-
-    checkstyleMain.onlyIf { project.hasProperty('codeQuality') }
-    checkstyleMain.dependsOn unzipBuildTools
-    checkstyleMain.source = "src/main/java"
-    checkstyleTest.enabled = false
-
-    apply plugin: 'jacoco'
-
-    jacoco {
-        toolVersion = "0.7.6.201602180812"
-    }
-
-    test {
-        jacoco {
-            destinationFile = file("$buildDir/jacoco/test.exec")
-        }
-    }
-
     uploadArchives.repositories.mavenDeployer {
         repository(url: "https://build-inera.nordicmedtest.se/nexus/content/repositories/releases") {
             authentication(userName: System.properties['nexusUsername'], password: System.properties['nexusPassword'])
@@ -92,13 +59,7 @@ subprojects {
         }
     }
 
-    configurations {
-        buildtools
-    }
-
     dependencies {
-        buildtools "se.inera.intyg.common:common-build-tools:${commonVersion}"
-
         testCompile "junit:junit:4.+"
         testCompile "org.mockito:mockito-core:${mockitoVersion}"
     }
@@ -114,18 +75,7 @@ task tagRelease(type: TagReleaseTask)
 
 task testReport(type: SharedTestReportTask)
 
-apply plugin: "org.sonarqube"
-
-sonarqube {
-    properties {
-        property "sonar.jacoco.reportPath", "$buildDir/jacoco/test.exec"
-        property "sonar.projectName", "Intygstjänsten"
-        property "sonar.projectKey", "intygstjansten"
-        property "sonar.host.url", System.properties['sonarUrl'] ?: "https://build-inera.nordicmedtest.se/sonar"
-        property "sonar.test.exclusions", "src/test/**"
-        property "sonar.exclusions", ["**/stub/**", "**/exception/**", "**/*Exception*.java"]
-    }
-}
+apply from: file("codequality.gradle")
 
 buildscript {
     dependencies {
