--- a/codequality.gradle
+++ b/codequality.gradle
@@ -18,6 +18,7 @@ subprojects {
 
     checkstyle {
         config = resources.text.fromFile("${buildDir}/build-tools/checkstyle/checkstyle.xml")
+        configProperties = ['package_name': 'intygstjanst']
         ignoreFailures = false
         showViolations = true
     }
