DEVENV: License-plugin

--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ buildscript {
         classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.+'
         classpath 'org.ajoberstar:gradle-git:1.+'
         classpath 'org.akhikhl.gretty:gretty:+'
+        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.+'
     }
 
     repositories {
