DEVENV: gradle 3.2.1. Igen.

--- a/tools/liquibase-runner/build.gradle
+++ b/tools/liquibase-runner/build.gradle
@@ -9,8 +9,8 @@ startScripts {
     doLast {
         def intygstjanstPersistenceDependency = configurations.runtime.filter { it.name.startsWith("intygstjanst-persistence") }.singleFile.name
 
-        unixScript.text = unixScript.text.replaceAll(/"\$@"$/,
-            "--driver=com.mysql.jdbc.Driver --classpath=lib/${intygstjanstPersistenceDependency} --changeLogFile=changelog/changelog.xml \"\\\$@\"")
+        unixScript.text = unixScript.text.replaceAll(/for s in \"\$\{@\}\"/,
+            'for s in --driver=com.mysql.jdbc.Driver --classpath=lib/' + webcertPersistenceDependency + ' --changeLogFile=changelog/changelog.xml "\\${@}"')
         windowsScript.text = windowsScript.text.replaceAll(/%CMD_LINE_ARGS%/,
             "--driver=com.mysql.jdbc.Driver --classpath=lib/${intygstjanstPersistenceDependency} --changeLogFile=changelog/changelog.xml %CMD_LINE_ARGS%")
     }
