--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -1,64 +1,64 @@
 ---
-# file: roles/intygstjanst/tasks/main.yml
 
-- name: stop tomcat
+- name: Stop tomcat
   service: name={{ tomcat_service }} state=stopped pattern={{ tomcat_service }}
 
-- name: create release directory
+- name: Create release directory
   file: path={{ releases_folder }} state=directory
 
-- name: download intygstjanst-liquibase-runner-{{ version }}.zip
-  get_url: url=https://build-inera.nordicmedtest.se/nexus/content/repositories/{{ repo }}/se/inera/intyg/intygstjanst/intygstjanst-liquibase-runner/{{ version }}/intygstjanst-liquibase-runner-{{ version }}.zip
+- name: Download intygstjanst-liquibase-runner-{{ version }}.zip
+  get_url: url=https://build-inera.nordicmedtest.se/nexus/content/repositories/releases/se/inera/intyg/intygstjanst/intygstjanst-liquibase-runner/{{ version }}/intygstjanst-liquibase-runner-{{ version }}.zip
            dest={{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.zip
   when: deploy_from_repo|bool
 
-- name: copy intygstjanst-liquibase-runner-{{ version }}.zip
+- name: Copy intygstjanst-liquibase-runner-{{ version }}.zip
   copy: src={{ inventory_dir }}/../tools/liquibase-runner/build/distributions/intygstjanst-liquibase-runner-{{ version }}.zip dest={{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.zip
   when: not deploy_from_repo|bool
 
 - name: Unzip liquibase-runner-{{ version }}.zip
-  command: unzip -od {{ releases_folder }} {{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.zip
-  args:
-    creates: "{{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}/bin/liquibase-runner"
+  unarchive: src={{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.zip
+             dest={{ releases_folder }}
+             remote_src=yes
+             creates="{{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}/bin/liquibase-runner"
 
-- name: run liquibase update
+- name: Run liquibase update
   command: "{{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}/bin/intygstjanst-liquibase-runner --url={{ database_url }} --username={{ database_username }} --password={{ database_password }} update"
   args:
       chdir: "{{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}"
   environment:
       JAVA_HOME: "{{ java_home }}"
 
-- name: download intygstjanst-web-{{ version }}.war
-  get_url: url=https://build-inera.nordicmedtest.se/nexus/content/repositories/{{ repo }}/se/inera/intyg/intygstjanst/intygstjanst-web/{{ version }}/intygstjanst-web-{{ version }}.war
+- name: Download intygstjanst-web-{{ version }}.war
+  get_url: url=https://build-inera.nordicmedtest.se/nexus/content/repositories/releases/se/inera/intyg/intygstjanst/intygstjanst-web/{{ version }}/intygstjanst-web-{{ version }}.war
            dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
            timeout=120
   when: deploy_from_repo|bool
 
-- name: copy intygstjanst-web-{{ version }}.war
+- name: Copy intygstjanst-web-{{ version }}.war
   copy: src={{ inventory_dir }}/../web/build/libs/intygstjanst-web-{{ version }}.war dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
   when: not deploy_from_repo|bool
 
-- name: remove old version of unpacked war
+- name: Remove old version of unpacked war
   file: state=absent
       path={{ webapps_folder }}/inera-certificate
 
-- name: remove old version of war
+- name: Remove old version of war
   file: state=absent
       path={{ webapps_folder }}/inera-certificate.war
 
-- name: deploy intygstjanst-web-{{ version }}.war as inera-certificate.war
+- name: Deploy intygstjanst-web-{{ version }}.war as inera-certificate.war
   command: cp {{ releases_folder }}/intygstjanst-web-{{ version }}.war {{ webapps_folder }}/inera-certificate.war
 
-- name: create version file
+- name: Create version file
   template: src=version.txt.j2 dest={{ webapps_folder }}/version.txt
 
-- name: fetch configuration repo to get new branches
+- name: Fetch configuration repo to get new branches
   command: chdir={{ config_folder }} git fetch origin
 
-- name: update configuration to {{ config_version }}
+- name: Update configuration to {{ config_version }}
   git: repo={{ config_repository }}
        dest={{ config_folder }}
        version={{ config_version }}
 
-- name: start tomcat
+- name: Start tomcat
   service: name={{ tomcat_service }} state=started pattern={{ tomcat_service }}
