--- a/ansible/provision_mysql.yml
+++ b/ansible/provision_mysql.yml
@@ -2,7 +2,7 @@
 # This playbook provisions mysql for Intygstjansten 
 
 - hosts: intygstjanst-mysql
-  sudo: yes 
+  become: yes 
 
   roles:
     - intygstjanst-mysql
