--- a/ansible/provision_tomcat.yml
+++ b/ansible/provision_tomcat.yml
@@ -2,7 +2,7 @@
 # This playbook provisions the resources needed by tomcat hosts of intygstjansten 
 
 - hosts: intygstjanst-tomcat
-  sudo: yes 
+  become: yes 
   
   roles:
     - intygstjanst-systemvariabler
