--- a/ansible/roles/intygstjanst-systemvariabler/tasks/main.yml
+++ b/ansible/roles/intygstjanst-systemvariabler/tasks/main.yml
@@ -1,10 +1,9 @@
 ---
-# file: roles/intygstjanst-systemvariabler/tasks/main.yml
 
 - name: Create certificate-env.sh file
   template: src=certificate-env.sh.j2 dest="{{ inera_tomcat_folder }}/certificate-env.sh" mode=755
 
-- name: configure setenv.sh
+- name: Configure setenv.sh
   lineinfile:
     dest="{{ tomcat_bin }}/setenv.sh"
     create=yes
