--- a/ansible/unlock_config_folder.yml
+++ b/ansible/unlock_config_folder.yml
@@ -2,7 +2,7 @@
 # This playbook unlocks the config repo folder
 
 - hosts: intygstjanst-tomcat
-  sudo: yes 
+  become: yes 
   
   roles:
     - unlock-config-folder
