INTYG-2714: Uppdaterar kommentar för properties gällande obsolete wiretap

--- a/web/recipient-dev.properties
+++ b/web/recipient-dev.properties
@@ -32,8 +32,7 @@
 # Defines the recipient FK (F\u00F6rs\u00E4kringskassan)
 # Logical address for FK (via NTjP)
 # Use:
-#   2021005521               for FK via WireTap,
-#   2021005521-nowiretap     for FK without WireTap,
+#   2021005521               for FK,
 #   Test                     for dummy consumer,
 #   FKORG                    for development mode
 recipient.FK.name = F\u00F6rs\u00E4kringskassan
