--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ buildscript {
         classpath 'org.ajoberstar:gradle-git:1.+'
         classpath 'org.akhikhl.gretty:gretty:+'
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.+'
+        classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.8'
     }
 
     repositories {
