--- a/ansible/provision_mysql.yml
+++ b/ansible/provision_mysql.yml
@@ -1,7 +1,7 @@
 ---
 # This playbook provisions mysql for Intygstjansten 
 
-- hosts: intygstjanst-mysql
+- hosts: mysql
   become: yes 
 
   roles:
