--- a/ansible/unlock_config_folder.yml
+++ b/ansible/unlock_config_folder.yml
@@ -1,7 +1,8 @@
 ---
 # This playbook unlocks the config repo folder
 
-- hosts: intygstjanst-tomcat
+- hosts: tomcat
+  serial: 1
   become: yes 
   
   roles:
