--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -12,7 +12,7 @@
   when: deploy_from_repo|bool
 
 - name: Copy intygstjanst-liquibase-runner-{{ version }}.zip
-  copy: src={{ inventory_dir }}/../tools/liquibase-runner/build/distributions/intygstjanst-liquibase-runner-{{ version }}.zip dest={{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.zip
+  copy: src={{ playbook_dir }}/../tools/liquibase-runner/build/distributions/intygstjanst-liquibase-runner-{{ version }}.zip dest={{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.zip
   when: not deploy_from_repo|bool
 
 - name: Unzip liquibase-runner-{{ version }}.zip
@@ -35,7 +35,7 @@
   when: deploy_from_repo|bool
 
 - name: Copy intygstjanst-web-{{ version }}.war from THIS machine when not deploying from remote repo
-  copy: src={{ inventory_dir }}/../web/build/libs/intygstjanst-web-{{ version }}.war dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
+  copy: src={{ playbook_dir }}/../web/build/libs/intygstjanst-web-{{ version }}.war dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
   when: not deploy_from_repo|bool
 
 - name: Remove old version of unpacked war
