--- a/web/build.gradle
+++ b/web/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     gretty "org.apache.activemq:activemq-client:${activeMqVersion}"
     gretty "org.apache.activemq:activemq-broker:${activeMqVersion}"
+    gretty "org.apache.activemq:activemq-kahadb-store:${activeMqVersion}"
     gretty "com.h2database:h2:${h2Version}"
     gretty "mysql:mysql-connector-java:${mysqlVersion}"
 }
