--- a/web/build.gradle
+++ b/web/build.gradle
@@ -21,7 +21,7 @@ gretty {
 
     jvmArgs = [
         "-Dcatalina.base=${buildDir}/catalina.base",
-        "-Dspring.profiles.active=dev,caching-enabled",
+        "-Dspring.profiles.active=dev,caching-enabled,wc-hsa-stub",
         "-Drecipient.config.file=${projectDir}/recipient-dev.properties",
         "-Dcredentials.file=${projectDir}/certificate-credentials.properties",
         "-Dcertificate.logback.file=${projectDir}/certificate-logback.xml",
