--- a/ansible/roles/intygstjanst-resurser/tasks/main.yml
+++ b/ansible/roles/intygstjanst-resurser/tasks/main.yml
@@ -2,28 +2,28 @@
 
 - name: Configure shared jdbc datasource for Intygstjansten
   lineinfile:
-    dest="{{ tomcat_conf }}/server.xml"
-    regexp="    <Resource name='sharedIntyg'"
-    insertbefore="  </GlobalNamingResources>"
-    line="    <Resource name='sharedIntyg' global='sharedIntyg'  auth='Container' type='javax.sql.DataSource' username='{{ database_username }}' password='{{ database_password }}' driverClassName='{{ database_driver }}' url='{{ database_url }}' maxActive='{{ database_pool_maxActive }}' maxIdle='{{ database_pool_maxIdle }}' minIdle='{{ database_pool_minIdle }}' initialSize='{{ database_pool_initialSize }}' validationQuery='SELECT 1' validationQueryTimeout='3' testWhileIdle='true' timeBetweenEvictionRunsMillis='300000' minEvictableIdleTimeMillis='60000' defaultAutocommit='false' />"
+    dest: "{{ tomcat_conf }}/server.xml"
+    regexp: "    <Resource name='sharedIntyg'"
+    insertbefore: "  </GlobalNamingResources>"
+    line: "    <Resource name='sharedIntyg' global='sharedIntyg'  auth='Container' type='javax.sql.DataSource' username='{{ database_username }}' password='{{ database_password }}' driverClassName='{{ database_driver }}' url='{{ database_url }}' maxActive='{{ database_pool_maxActive }}' maxIdle='{{ database_pool_maxIdle }}' minIdle='{{ database_pool_minIdle }}' initialSize='{{ database_pool_initialSize }}' validationQuery='SELECT 1' validationQueryTimeout='3' testWhileIdle='true' timeBetweenEvictionRunsMillis='300000' minEvictableIdleTimeMillis='60000' defaultAutocommit='false' />"
 
 - name: Configure jdbc resource
   lineinfile:
-    dest="{{ tomcat_conf }}/context.xml"
-    regexp="    <ResourceLink name='jdbc/intyg'|    <Resource name='jdbc/intyg'"
-    insertbefore="</Context>"
-    line="    <ResourceLink name='jdbc/intyg' global='sharedIntyg' type='javax.sql.DataSource'/>"
+    dest: "{{ tomcat_conf }}/context.xml"
+    regexp: "    <ResourceLink name='jdbc/intyg'|    <Resource name='jdbc/intyg'"
+    insertbefore: "</Context>"
+    line: "    <ResourceLink name='jdbc/intyg' global='sharedIntyg' type='javax.sql.DataSource'/>"
 
 - name: Configure connection factory
   lineinfile:
-    dest="{{ tomcat_conf }}/context.xml"
-    regexp="    <Resource name='jms/ConnectionFactory'"
-    insertbefore="</Context>"
-    line="    <Resource name='jms/ConnectionFactory' auth='Container' type='org.apache.activemq.ActiveMQConnectionFactory' description='JMS Connection Factory' factory='org.apache.activemq.jndi.JNDIReferenceFactory' brokerURL='{{ activemq_broker_url }}' userName='{{ activemq_username }}' password='{{ activemq_username }}' brokerName='ActiveMQBroker' useEmbeddedBroker='false' />"
+    dest: "{{ tomcat_conf }}/context.xml"
+    regexp: "    <Resource name='jms/ConnectionFactory'"
+    insertbefore: "</Context>"
+    line: "    <Resource name='jms/ConnectionFactory' auth='Container' type='org.apache.activemq.ActiveMQConnectionFactory' description='JMS Connection Factory' factory='org.apache.activemq.jndi.JNDIReferenceFactory' brokerURL='{{ activemq_broker_url }}' userName='{{ activemq_username }}' password='{{ activemq_username }}' brokerName='ActiveMQBroker' useEmbeddedBroker='false' />"
     
 - name: Configure queue
   lineinfile:
-    dest="{{ tomcat_conf }}/context.xml"
-    regexp="    <Resource name='jms/Queue'"
-    insertbefore="</Context>"
-    line="    <Resource name='jms/Queue' auth='Container' type='org.apache.activemq.command.ActiveMQQueue' description='Statistics certificate Queue' factory='org.apache.activemq.jndi.JNDIReferenceFactory' physicalName='{{ environment_name }}.statistik.utlatande.queue' />"    
+    dest: "{{ tomcat_conf }}/context.xml"
+    regexp: "    <Resource name='jms/Queue'"
+    insertbefore: "</Context>"
+    line: "    <Resource name='jms/Queue' auth='Container' type='org.apache.activemq.command.ActiveMQQueue' description='Statistics certificate Queue' factory='org.apache.activemq.jndi.JNDIReferenceFactory' physicalName='{{ environment_name }}.statistik.utlatande.queue' />"    
