DEVENV: korrekt yaml-syntax (fix 2)

--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -71,7 +71,7 @@
 - name: Update configuration to {{ config_version }}
   git:
     repo: {{ config_repository }}
-    dest: {{ config_folder }}
+    dest: "{{ config_folder }}"
     version: {{ config_version }}
 
 - name: Start tomcat
