INTYG-3624: Ny portkonfig för Ignite

--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -47,9 +47,9 @@ infrastructure.directory.logicalAddress=
 # HSA/PU ignite cache settings
 #
 ################################################
-cache.ipaddresses=127.0.0.1:47500..47509
+cache.ipaddresses=127.0.0.1:47530..47539
 cache.default.expiration.seconds=60
-
+cache.bindport=47530
 hsa.unit.cache.expiry=60
 hsa.healthcareunit.cache.expiry=60
 hsa.healhcareunitmembers.cache.expiry=60
