--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ ext {
 
     intygHealthcondRehabilitationSchemasVersion = "1.0.4"
     intygInsuranceprocessSchemasVersion = "1.0.4"
-    rivtaClinicalprocessSchemasVersion = "2.0"
+    rivtaClinicalprocessSchemasVersion = "0-SNAPSHOT"
     rivtaItintegrationMonitoringSchemasVersion = "1.0.0.4"
 
     activeMqVersion = "5.13.4"
