--- a/build.gradle
+++ b/build.gradle
@@ -34,39 +34,41 @@ buildscript {
 
     dependencies {
         classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.+'
-        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.+'
-        classpath 'org.ajoberstar:gradle-git:1.+'
         classpath 'org.akhikhl.gretty:gretty:+'
-        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.+'
-        classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.8'
     }
 }
 
 allprojects {
-    group = 'se.inera.intyg.intygstjanst'
-    version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
-
-    apply plugin: 'inera-intyg'
-    apply plugin: 'maven'
-    apply plugin: 'org.ajoberstar.grgit'
-}
-
-subprojects {
     repositories {
         mavenLocal()
         maven { url "https://build-inera.nordicmedtest.se/nexus/content/repositories/releases/" }
         maven { url "http://repo.maven.apache.org/maven2" }
     }
 
+    apply plugin: 'inera-intyg'
+    apply plugin: 'maven'
+
     dependencies {
         testCompile "junit:junit:4.+"
         testCompile "org.mockito:mockito-core:${mockitoVersion}"
     }
 
-    apply plugin: 'java'
+    group = 'se.inera.intyg.intygstjanst'
+    version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+
+    checkstyle {
+        configProperties = ['package_name': 'intygstjanst']
+    }
+
+    sonarqube {
+        properties {
+            property "sonar.projectName", "Intygstjänsten"
+            property "sonar.projectKey", "intygstjansten"
+        }
+    }
 
     task createVersionPropertyFile(type: VersionPropertyFileTask)
 
@@ -89,5 +91,3 @@ subprojects {
 task tagRelease(type: TagReleaseTask)
 
 task testReport(type: SharedTestReportTask)
-
-apply from: file("codequality.gradle")
