--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,9 +1,10 @@
 ---
-# This playbook deploys Intygstjansten 
 
 - hosts: tomcat
   serial: 1
   become: yes
+  environment:
+    "{{ proxy_env }}"
   vars:
     config_version: master
 
