--- a/ansible/provision_mysql.yml
+++ b/ansible/provision_mysql.yml
@@ -1,8 +1,8 @@
 ---
-# This playbook provisions mysql for Intygstjansten 
 
 - hosts: mysql
-  become: yes 
-
+  become: yes
+  environment:
+    "{{ proxy_env }}"
   roles:
     - intygstjanst-mysql
