--- a/ansible/provision_tomcat.yml
+++ b/ansible/provision_tomcat.yml
@@ -1,10 +1,10 @@
 ---
-# This playbook provisions the resources needed by tomcat hosts of intygstjansten
 
 - hosts: tomcat
   serial: 1
   become: yes
-
+  environment:
+    "{{ proxy_env }}"
   roles:
     - intygstjanst-systemvariabler
     - intygstjanst-resurser
