--- a/web/build.gradle
+++ b/web/build.gradle
@@ -29,7 +29,6 @@ war.dependsOn createVersionPropertyFile
 
 dependencies {
     compile project(':intygstjanst-persistence')
-    compile "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:0-SNAPSHOT"
     compile "se.inera.intyg.insuranceprocess.healthreporting:intyg-insuranceprocess-healthreporting-schemas:${intygInsuranceprocessSchemasVersion}"
 
     compile "se.inera.intyg.infra:hsa-integration:${infraVersion}"
@@ -59,7 +58,9 @@ dependencies {
     testCompile "org.antlr:ST4:${stAntlr4Version}"
     testCompile "org.apache.geronimo.specs:geronimo-jms_1.1_spec:${geronimoJmsVersion}"
 
-  //  testRuntime "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:0-SNAPSHOT"
+    // We explicitly declare this as a testRuntime dependency so Restassured tests loads the correct XSD for
+    // SetCertificateStatusResponder_1.0.xsd (as it exists in two different schemas)
+    testRuntime "se.riv.clinicalprocess.healthcond.certificate:clinicalprocess-healthcond-certificate-schemas:${rivtaClinicalprocessSchemasVersion}"
     testRuntime "javax.servlet:servlet-api:${servletApiVersion}"
 
     gretty "org.apache.activemq:activemq-client:${activeMqVersion}"
