--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.15'
-        classpath 'org.akhikhl.gretty:gretty:+'
+        classpath 'se.inera.intyg:gradle-intyg-plugin:1.0.+'
+        classpath 'org.akhikhl.gretty:gretty:1.4.1'
     }
 }
 
@@ -60,17 +60,6 @@ allprojects {
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
-
-    checkstyle {
-        configProperties = ['package_name': 'intygstjanst']
-    }
-
-    sonarqube {
-        properties {
-            property "sonar.projectName", "Intygstjänsten"
-            property "sonar.projectKey", "intygstjansten"
-        }
-    }
 
     task createVersionPropertyFile(type: VersionPropertyFileTask)
 
