--- a/web/build.gradle
+++ b/web/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile project(':intygstjanst-persistence')
     compile "se.inera.intyg.insuranceprocess.healthreporting:intyg-insuranceprocess-healthreporting-schemas:${intygInsuranceprocessSchemasVersion}"
 
+    compile "se.inera.intyg.schemas:schemas-contract:0-SNAPSHOT"
     compile "se.inera.intyg.infra:hsa-integration:${infraVersion}"
     compile "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
 
