INTYG-3567: Lagt till en dummy recipient (för lisjp) för att kunna testa skicka till flera mottagare i MI

--- a/web/recipient-dev.properties
+++ b/web/recipient-dev.properties
@@ -39,6 +39,12 @@ recipient.FK.name = F\u00F6rs\u00E4kringskassan
 recipient.FK.logicalAddress = Test
 recipient.FK.certificateType = fk7263,luse,lisjp,luae_fs,luae_na
 
+#Added a dummy recipient to be able to test send to multiple recipients in dev env
+recipient.FBA.name = F\u00F6rs\u00E4kringsbolaget AB
+recipient.FBA.logicalAddress = Test
+recipient.FBA.certificateType = lisjp
+
+
 # Defines the recipient TS (Transportstyrelsen)
 recipient.TS.name = Transportstyrelsen
 recipient.TS.logicalAddress = tsTestAddress
