--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ ext {
 
     intygHealthcondRehabilitationSchemasVersion = "1.0.4"
     intygInsuranceprocessSchemasVersion = "1.0.4"
-    rivtaClinicalprocessSchemasVersion = "0-SNAPSHOT" //"3.0.0-beta4"
+    rivtaClinicalprocessSchemasVersion = "3.0.0-RC2"
     rivtaItintegrationMonitoringSchemasVersion = "1.0.0.4"
 
     activeMqVersion = "5.13.4"
