INTYG-2748: Addera nya intygsmottagare via config

--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -53,3 +53,11 @@ cache.bindport=47530
 hsa.unit.cache.expiry=60
 hsa.healthcareunit.cache.expiry=60
 hsa.healhcareunitmembers.cache.expiry=60
+
+################################################
+#
+# Recipient update schedule
+#
+################################################
+recipients.update.cron = 0 * * * * *
+recipient.file = ${recipient.config.file}
