--- a/web/build.gradle
+++ b/web/build.gradle
@@ -19,7 +19,7 @@ gretty {
 
     jvmArgs = ["-Dcatalina.base=${buildDir}/catalina.base",
                "-Dspring.profiles.active=dev,caching-enabled,wc-hsa-stub",
-               "-Drecipient.config.file=${projectDir}/recipient-dev.properties",
+               "-Drecipient.config.file=${projectDir}/recipients-dev.json",
                "-Dcredentials.file=${projectDir}/certificate-credentials.properties",
                "-Dcertificate.logback.file=${projectDir}/certificate-logback.xml",
                "-Dcertificate.config.file=${projectDir}/certificate-dev.properties"]
