--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -35,3 +35,11 @@ revokemedicalcertificatev1.endpoint.url =
 # Override to disable sending JMS messages to statistik-tj\u00E4nsten, since we don't have JMS connectivity in this env.
 # However we want it enabled when building on jenkins since it runs the TransformToStatisticsIT integration test.
 statistics.enabled = true
+
+################################################
+#
+# Recipient update schedule
+#
+################################################
+recipients.update.cron = 0 * * * * *
+recipient.file =
