INTYG-3761: lade till property för dynamisk laddning av identiteter

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -36,6 +36,9 @@ revokemedicalcertificatev1.endpoint.url =
 # However we want it enabled when building on jenkins since it runs the TransformToStatisticsIT integration test.
 statistics.enabled = true
 
+# Dynamic loading of identities into HSA stub
+hsa.stub.additional.identities.folder=${java.io.tmpdir}
+
 ################################################
 #
 # Recipient update schedule
