DEVENV: ta bort onödig radering av tidigare fil

--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -55,13 +55,11 @@
     state: absent
     path: "{{ webapps_folder }}/inera-certificate"
 
-- name: Remove old version of war
-  file:
-    state: absent
-    path: "{{ webapps_folder }}/inera-certificate.war"
-
 - name: Deploy intygstjanst-web-{{ version }}.war as inera-certificate.war
-  command: "cp {{ releases_folder }}/intygstjanst-web-{{ version }}.war {{ webapps_folder }}/inera-certificate.war"
+  copy:
+    src: "{{ releases_folder }}/intygstjanst-web-{{ version }}.war"
+    dest: "{{ webapps_folder }}/inera-certificate.war"
+    remote_src: True
 
 - name: Fetch configuration repo to get new branches
   command: git fetch origin
