--- a/web/build.gradle
+++ b/web/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile "se.inera.intyg.common:luae_na:${commonVersion}"
 
     compile "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
+    compile "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schemas:1.0.7-beta3"
     compile "se.inera.intyg.clinicalprocess.healthcond.rehabilitation:intyg-clinicalprocess-healthcond-rehabilitation-schemas:${intygHealthcondRehabilitationSchemasVersion}"
 
     compile "org.springframework:spring-jms:${springVersion}"
