--- a/ansible/roles/intygstjanst-mysql/tasks/main.yml
+++ b/ansible/roles/intygstjanst-mysql/tasks/main.yml
@@ -2,11 +2,15 @@
 
 - name: Create mysql database
   mysql_db:
+    login_user: "{{ database_provisioning_username }}"
+    login_password: "{{ database_provisioning_password }}"
     name: "{{ database_name }}"
     state: present
     
 - name: Create mysql user
   mysql_user:
+    login_user: "{{ database_provisioning_username }}"
+    login_password: "{{ database_provisioning_password }}"
     name: "{{ database_username }}"
     password: "{{ database_password }}"
     priv: "*.*:ALL"
